--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-a11y": "^6.0.21",
+    "@storybook/addon-backgrounds": "^6.0.21",
+    "@storybook/addon-contexts": "^5.3.21",
+    "@storybook/addon-docs": "^5.3.21",
+    "@storybook/addon-knobs": "^6.0.21",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -42,7 +46,7 @@
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
-    "@storybook/preset-create-react-app": "^3.1.2",
+    "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^5.3.19",
     "react-spring": "^8.0.27"
   }
